# pe-file-implementation

./: .gitignore  CMakeLists.txt  README.md  asm-debugger-x64.bat  asm-debugger-x86.bat  compile-64.bat  compile-and-run.bat  compile-payload.bat  compile-x64.bat  compile-x86.bat  convert.js  infect-test.bat  link-only.bat  package-lock.json  package.json  setup.bat
.github/workflows/: cmake-single-platform-2.yml
include/: exception.h  helpers.h  infection.h  pe.h  peb-lookup.h  windows-constants.h
payload/: oep-stager-header.h  payload.asm  payload_old.cpp
payload/src/: payload.cpp  peb-lookup.h
src/: asm-fix.js  exception.cpp  main.cpp  payload.cpp  pefile-infector.cpp  pefile-oep-stager.cpp  pefile.cpp  target.cpp
src/lib/: exception.cpp  helpers.cpp  infection.cpp
src/lib/helpers/: arithmetic.cpp  files.cpp  format.cpp
src/lib/pe/: constructor.cpp  display.cpp  getters.cpp  internals.cpp  manipulation.cpp
